# server.js
@@ -1,10 +1,62 @@
 const express = require('express');
 const bodyParser = require('body-parser');
 const pokemonRoutes = require('./routes/pokemonRoutes');
+const trainerRoutes = require('./routes/trainerRoutes');
 const { initDB } = require('./data/database');
+const passport = require ('passport');
+const session = require('express-session');
+const { body } = require('express-validator');
+const GitHubStrategy = require('passport-github2').Strategy;
+const cors = require('cors');
 
 const app = express();
 const port = process.env.PORT || 3000;
+
+require('dotenv').config();
+
+app.use(bodyParser.json())
+  .use(session({
+    secret: process.env.SESSION_SECRET,
+    resave: false,
+    saveUninitialized: true,
+  }))
+  .use(passport.initialize())
+  .use(passport.session())
+  .use((req, res, next) => {
+    res.setHeader('Access-Control-Allow-Origin', '*');
+    res.setHeader('Access-Control-Allow-Headers', 'Origin X-Requested-With, Content-Type, Accept, Z-Key, Authorization');
+    res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, PATCH, OPTIONS, DELETE');
+    next();
+  })
+  .use(cors({methods: ['GET, POST, PUT, PATCH, OPTIONS, DELETE']}))
+  .use(cors({origin: '*'}))
+  .use('/', require('./routes/index.js'));
+
+  passport.use(new GitHubStrategy({
+    clientID: process.env.GITHUB_CLIENT_ID,
+    clientSecret: process.env.GITHUB_CLIENT_SECRET,
+    callbackURL: process.env.CALLBACK_URL
+  }, 
+  (accessToken, refreshToken, profile, done) => {
+    return done(null, profile);
+  }
+));
+
+passport.serializeUser((user, done) => {
+  done(null, user);
+});
+passport.deserializeUser((user, done) => {
+  done(null, user);
+});
+
+  
+
+app.get('/github/callback', passport.authenticate('github', {
+    failureRedirect: '/api-docs', session: false}),
+    (req, res) => {
+    req.session.user = req.user;
+    res.redirect('/');
+});
 
 app.use(bodyParser.json());
 app.use((req, res, next) => {
@@ -16,6 +68,7 @@ app.use((req, res, next) => {
 
 app.use('/', require('./routes'));
 app.use('/pokemon', pokemonRoutes);
+app.use('/trainers', trainerRoutes);
 
 initDB((err) => {
   if (err) {
